
        * tao/ORBInitializer.{h,cpp}:
          New file, contains the PortableInterceptor::register_orb_initializer
          method. This will try to load the PI_Client lib and use the
          ORBInitializer_Registry_Adapter interface to register the
          initializer to the registry. Will provide the implementation later

        * tao/ORBInitializer_Registry_Adapter.h:
          ORBInitializer registry adapter class

        * tao/PI_Client/CodecFactory_ORBInitializer.{h,cpp}:
        * tao/PI_Client/ORBInitializer.pidl:
        * tao/PI_Client/ORBInitializer_Registry.{h,cpp}
        * tao/PI_Client/ORBInitializerA.cpp:
        * tao/PI_Client/ORBInitializerC.{h,cpp}:
        * tao/PI_Client/ORBInitializerS.h:
        * tao/PI_Client/ORBInitInfo.{h,cpp,inl}:
        * tao/PI_Client/ORBInitInfo.pidl:
        * tao/PI_Client/ORBInitInfoA.cpp:
        * tao/PI_Client/ORBInitInfoC.{h,cpp}:
        * tao/PI_Client/ORBInitInfoS.h
        * tao/PI_Client/PICurrent_ORBInitializer.{h,cpp}:
          New files, they are moved from the TAO lib, just put them now
          in cvs so that I don't loose changes

        * tao/PI_Client/PolicyFactory_Registry.{cpp,h}:

        * tao/PI_Client/PI_Client.cpp

        * tao/PortableServer/POA_Current_Impl.cpp:
          Removed include of ORBInitializer_Registry.h, not needed

        * tao/ORBInitInfo.pidl:
          Include Policy_Forward.pidl instead of Policy.pidl

        * tao/ORBInitInfoC.h:
          Regenerated

ChangeLogTag: Tue May 31 12:28:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.{h,cpp,i}:
          Load the PolicyFactory Registry when needed

        * tao/PI_Client/PolicyFactory_Registry.h:
          Added svc conf macros

        * tao/PI_Client/PI_Client.{h,cpp}:
          New files with static initializer for static builds.

          The PolicyFactory_Registry is now loaded on demand when needed from the